--- a/Developpement/static/styles/css/autre/concerts.css
+++ b/Developpement/static/styles/css/autre/concerts.css
@@ -1,81 +1,61 @@
-.quatuor-concert-div{
-  display: flex;
-}
-.quatuor-concert-div>p{
-  margin-left: 2.5%;
-  margin-right: 2.5%
-}
-.quatuor-concert-gpartie>{
-text-align: center
-}
-.quatuor-concert-div{
-  margin-bottom: 2.5%
-}
-#concert-quatuor{
-  background-color: rgba(0, 0, 0, 0.05);
-  border-radius: 10px;
+#boutton-concert{
+  text-decoration: none;
+  color: black;
+
 }
 
+
 #concert-stage{
-  background-color: rgba(0, 0, 0, 0.05);
-  border-radius: 10px;
-}
-.titre-gpartie{
-  text-align: center;
-  margin-bottom: 10%;
-}
-.presentation-div{
-  display: flex;
-  margin-bottom: 5%
-}
-.presentation-img{
-  height: 100%;
-  width: 100%;
-  border-radius: 5%;
-  margin-right: 2.5%;
-  margin-left: 2.5%;
-}
-.presentation-text{
-  font-family: Verdana,sans-serif;
-  font-size: 15px;
-}
-.text-milieu{
-  width: 50%;
-  margin-top:15%
-}
-.margin-bottom-10{
-  margin-bottom: 10%
-}
-.text-left{
-  text-align: left;
-}
-.text-right{
+  background-color: rgba(250, 250, 207, 0.11);
   text-align: right;
+  margin-bottom: 1em;
+  margin-top: 1em;
 }
-.margin-right-10{
-  margin-right: 10%
-}
-.margin-left-10{
-  margin-left: 10%
-}
-.margin-right-5{
+#concert-stage p{
   margin-right: 5%
 }
-.margin-left-5{
+#concert-stage h2{
+  margin-right: 15%
+}
+
+
+#concert-quatuor p{
   margin-left: 5%
 }
-#boutton-concert{
-  text-decoration none;
-  color : black;
+#concert-quatuor h2{
+  margin-left: 15%
 }
-.text-stage{
-  margin-left: 5%
+
+#concert-quatuor{
+  background-color: rgba(239, 250, 207, 0.11);
+  text-align: left;
+  margin-bottom: 1em;
+  margin-top: 1em;
 }
-.text-quatuor{
-  margin-right: 5%;
-}.iframe-quatuor{
-  border-radius: 10px 0px 0px 0px;
+.map-container-9,.map-container-10,.map-container-11 {
+overflow:hidden;
+padding-bottom:56.25%;
+position:relative;
+height:0;
 }
-.iframe-stage{
-  border-radius: 0px 10px 0px 0px;
-}  
+
+.map-container-9 iframe, .map-container-10 iframe, .map-container-11 iframe{
+left:0;
+top:0;
+height:100%;
+width:100%;
+position:absolute;
+}
+
+.flex-row{
+  display: flex;
+  flex-wrap: wrap;
+
+}
+
+.flex-row>div{
+  width: 65%
+}
+.flex-row>img{
+  width: 35%;
+}
