--- a/Developpement/static/styles/css/stage/stage_inscription.css
+++ b/Developpement/static/styles/css/stage/stage_inscription.css
@@ -1,1 +1,48 @@
- 
+#h3title{
+    text-align: center;
+}
+h4{
+    font-family: 'aaa';
+    font-weight: bold;
+    margin-top:1%;
+    text-align: center;
+}
+ul>li{
+    list-style-type: none;
+}
+label{
+    margin-top: 0.5%;
+}
+.bigcontainer{
+    font-family: 'aaa';
+    margin-top:1%;
+    margin-left: 27%;
+    text-align: center;
+}
+.bigcontainer2{
+    font-family: 'aaa';
+    margin-top:1%;
+    margin-left: 26.0%;
+    text-align: center;
+}
+.form-group{
+    width:50%;
+}
+#submit{
+    margin-top:1.5%;
+} 
+.underline{
+    width:22%;
+    margin-left: 39%;
+    margin-top:-1.5%;
+}
+.underline2{
+    width:12%;
+    margin-left: 44%;
+    margin-top:-1.5%;
+}
+p{
+    margin-left: -26%;
+    width: 100%;
+    margin-top:2%;
+}
