--- a/Developpement/static/styles/css/stage/stage_presentation.css
+++ b/Developpement/static/styles/css/stage/stage_presentation.css
@@ -8,11 +8,6 @@
 .tableau th{
   text-align: center;
 }
-#what{
-  width: 90%;
-  text-align: center;
-  margin-left: 7%;
-}
 .recherche{
   text-align: center;
   font-family: 'aaa';
@@ -24,22 +19,13 @@
   flex-wrap: wrap;
   margin-left:33.5%;
 }
-.underline2{
-  width:16%;
-  margin-left: 42.5%;
-  margin-top:-1.5%;
-}
-.underline{
-  width:10%;
-  margin-left: 45%;
-  margin-top:-1.5%;
-}
 #h2-1{
-  margin-top: 6%;
+  margin-top: 4%;
   text-align: center;
 }
 #h2-2{
   text-align: center;
+  margin-top: 4%;
 }
 .list-profs>ul{
   list-style-type: none;
@@ -50,6 +36,21 @@
 .list-profs li{
   padding: 3.5%;
   text-align: center;
-  margin-top: 2%;
+  margin-top: 1%;
 }
- 
+h4{
+  text-align: center;
+  font-family: 'aaa';
+}
+.dropdowngeneral{
+  width:35%;
+  text-align: center;
+  font-family: 'aaa';
+  margin-left: 31.5%;
+}
+underline{
+  width: 10%;
+}
+.btn{
+  margin-top:2%;
+}
