--- a/Developpement/templates/stage/stage_presentation.html
+++ b/Developpement/templates/stage/stage_presentation.html
@@ -7,6 +7,7 @@
   <div class='first-subtitle'>
     <div id="h2-1">
       <h2>Les Profs</h2>
+      <img class="underline" src="{{ url_for('static',filename='img/underline3.png') }}">
     </div>
     <div class="list-profs">
         <ul>
@@ -36,66 +37,36 @@
             </li>
         </ul>
     </div>
-    <div id="h2-2"><h2>Vous inscrire à un Stage</h2></div>
-    <img class="underline2" src="{{ url_for('static',filename='img/underline1.png') }}" alt="underline">
-    <div class="global2">
+    <div id="h2-2"><h2>Vous inscrire à un Stage</h2>
+    <img class="underline" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline"></div>
         <div class="dropdowngeneral">
                 <h4>Votre Niveau: </h4>
-                <select id="what" class="form-control selectpicker show-tick">
+                <select class="form-control selectpicker show-tick">
                     <option selected>Select...</option>
                     <option>Niveau 1</option>
                     <option>Niveau 2</option>
                     <option>Niveau 3</option>
                 </select>
         </div>
-      </li>
-      <li>
-        <div class="robert">
-          <img src="{{ url_for('static',filename='img/Robert-Ramon.png')}}" class="img-rounded" alt="olivier" width="165" height="200">
-          <h3>Robert Ramon</h3>
-        </div>
-      </li>
-      <li>
-        <div class="tony">
-          <img src="{{ url_for('static',filename='img/Tony-Bigot.png')}}" class="img-rounded" alt="olivier" width="165" height="200">
-          <h3>Tony Bigot</h3>
-        </div>
-      </li>
-    </ul>
-  </div>
-  <div id="h2-2">
-    <h2>Vous inscrire à un Stage</h2>
-  </div>
-  <img class="underline2" src="{{ url_for('static',filename='img/underline1.png') }}" alt="underline">
-  <div class="global2">
-    <div class="dropdowngeneral">
-      <h4>Votre Niveau: </h4>
-      <select id="what" class="form-control selectpicker show-tick">
-        <option selected>Select...</option>
-        <option>Niveau 1</option>
-        <option>Niveau 2</option>
-        <option>Niveau 3</option>
-      </select>
-    </div>
-    <div class="dropdowngeneral">
-      <h4>Votre Instrument: </h4>
-      <select id="what" class="form-control selectpicker show-tick">
-        <option selected>Select...</option>
-        <option>Clarinette en laB</option>
-        <option>Clarinette en miB</option>
-        <option>Clarinette en ré</option>
-        <option>Clarinette en ut</option>
-        <option>Clarinette en siB</option>
-        <option>Clarinette en la</option>
-        <option>Clarinette en la de basset</option>
-        <option>Cor de basset en fa</option>
-        <option>Clarinette basse en siB</option>
-        <option>Clarinette contralto en miB</option>
-        <option>Clarinette contrebasse en siB</option>
-      </select>
-    </div>
-    <div class="recherche"><button type="button" class="btn btn-default" data-toggle="collapse" data-target=".tableau">Rechercher les stages disponibles</button></div>
-    <div class="container_tab">
+      <div class="dropdowngeneral">
+        <h4>Votre Instrument: </h4>
+        <select class="form-control selectpicker show-tick">
+          <option selected>Select...</option>
+          <option>Clarinette en laB</option>
+          <option>Clarinette en miB</option>
+          <option>Clarinette en ré</option>
+          <option>Clarinette en ut</option>
+          <option>Clarinette en siB</option>
+          <option>Clarinette en la</option>
+          <option>Clarinette en la de basset</option>
+          <option>Cor de basset en fa</option>
+          <option>Clarinette basse en siB</option>
+          <option>Clarinette contralto en miB</option>
+          <option>Clarinette contrebasse en siB</option>
+        </select>
+      </div>
+      <div class="recherche"><button type="button" class="btn btn-default" data-toggle="collapse" data-target=".tableau">Rechercher les stages disponibles</button></div>
+      <div class="container_tab">
         <div class="tableau">
             <table class="table table-striped">
               <thead>
