Test JS. Verification d'age. Afichage d'un element en fonction d'un evenement (exemple : age>18)

--- a/Developpement/templates/base.html
+++ b/Developpement/templates/base.html
@@ -82,13 +82,8 @@
 {% block scripts %}
 {{ super() }}
 <script>
-  var tabcur = "tab-home"; {
-    % block js %
-  }
+  var tabcur = "tab-home";
 
-  {
-    % endblock %
-  }
   $(function() {
     $("#" + tabcur).addClass('active')
   })
