--- a/Developpement/templates/other/concerts.html
+++ b/Developpement/templates/other/concerts.html
@@ -5,7 +5,7 @@
 <div class="">
   <h1 class="">Concerts</h1>
   <div class="quatuor-concert-gpartie">
-    <p class="margin-bottom-10">
+    <p class="boutton-concert">
       <!-- Bouton pour afficher les concerts -->
       <a href="#" title="Affiche les futurs concerts du quatuor" data-toggle="popover" data-trigger="hover" data-content="" id="boutton-concert"><button class="btn " type="button" data-toggle="collapse" data-target="#concert-quatuor" aria-expanded="false"
           aria-controls="multiCollapseExample2">Concerts du Quatuor</button></a>
