--- a/Developpement/static/styles/css/stage/stage_inscription.css
+++ b/Developpement/static/styles/css/stage/stage_inscription.css
@@ -7,6 +7,13 @@ h4{
     margin-top:1%;
     text-align: center;
 }
+h5{
+    font-family: 'aaa';
+    font-weight: bold;
+    margin-top:1%;
+    text-align: center;
+    margin-right: 48%;
+}
 ul>li{
     list-style-type: none;
 }
@@ -42,7 +49,21 @@ label{
     margin-top:-1.5%;
 }
 p{
-    margin-left: -26%;
-    width: 100%;
-    margin-top:2%;
+    margin-left: -22%;
+    width: 90%;
+    margin-top:3%;
+    padding-bottom: 2%;
+    text-align: justify;
+}
+.checkbox{
+    width: 90%;
+    margin-left: 4%;
+}
+#check{
+    width:3.5%;
+    margin-top:-13.5%;
+}
+#check2{
+    margin-top: -10%;
+    width:3.5%;
 }
