--- a/Developpement/templates/stage/stage_inscription_autorisationMedicale.html
+++ b/Developpement/templates/stage/stage_inscription_autorisationMedicale.html
@@ -16,22 +16,22 @@
                 <form class="form-horizontal" role="form" method="POST" action="{{ url_for('stage_inscription_autorisationMedicale') }}">
                     {{ form.hidden_tag() }}
                     <div class="form-group">
-                        <label for="tel1Pers">{{ form.tel1Pers.label }}</label>
+                        <label for="numContactUrg1">{{ form.numContactUrg1.label }}</label>
                         <div>
-                            {{ form.tel1Pers(size=50, class_="form-control", type="tel", pattern="[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}", placeholder="06-33-59-20-90")}}
+                            {{ form.numContactUrg1(size=50, class_="form-control", type="tel", pattern="[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}", placeholder="06-33-59-20-90")}}
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="tel1Pers">{{ form.tel1Pers.label }}</label>
+                        <label for="numContactUrg2">{{ form.numContactUrg2.label }}</label>
                         <div>
-                            {{ form.tel1Pers(size=50, class_="form-control", type="tel", pattern="[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}", placeholder="06-33-59-20-90")}}
+                            {{ form.numContactUrg2(size=50, class_="form-control", type="tel", pattern="[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}", placeholder="06-33-59-20-90")}}
                         </div>
                     </div>
                     <button data-toggle="collapse" data-target="#demo" class="button button5"><span class="glyphicon glyphicon-plus"></span></button>
                     <div id="demo" class="collapse">
-                        <label for="tel1Pers">{{ form.tel1Pers.label }}</label>
+                        <label for="numContactUrg3">{{ form.numContactUrg3.label }}</label>
                         <div>
-                            {{ form.tel1Pers(size=50, class_="form-control", type="tel", pattern="[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}", placeholder="06-33-59-20-90")}}
+                            {{ form.numContactUrg3(size=50, class_="form-control", type="tel", pattern="[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}", placeholder="06-33-59-20-90")}}
                         </div>
                     </div>
             </div>
@@ -40,7 +40,7 @@
                 Conformément à la loi n° 2002-303 du 4 mars 2002 relative aux droits des malades :
                 En cas d’urgence, un élève accidenté ou malade est orienté et transporté par les services de secours d’urgence vers l’hôpital le mieux adapté. La famille est immédiatement avertie par nos soins. Un élève mineur ne peut sortir de l’hôpital qu’accompagné de sa famille. Si vous le souhaitez, dans l'intérêt de votre enfant, vous pouvez prendre rendez-vous avec les responsables de l’association pour nous expliquer un éventuel cadre clinique particulier, ou la prise d'un
                 traitement nécessitant notre vigilance.</p>
-        <div class="bigcontainer">
+        <div class="bigcontainer2">
             <div class="container" id="container1">
                 <div class="row">
                     <div class="col-sm-11">
