--- a/Developpement/templates/other/connexion.html
+++ b/Developpement/templates/other/connexion.html
@@ -19,9 +19,11 @@
   <div class="form-group">
     <div class="col-sm-offset-3 col-sm-3">
       <button type="submit" class="btn btn-default">Se connecter</button>
+      <a href="/other/mdpOubli/"> mot de passe oublié ?</a>
     </div>
   </div>
 </form>
+
 {% endblock %}
 {% block js %}
 {{ super() }}
