continuation page recettes 3

--- a/Developpement/templates/stage/stage_recettes.html
+++ b/Developpement/templates/stage/stage_recettes.html
@@ -44,23 +44,32 @@ $(function(){
       </div>
       <div class="row">
         <div class="col-sm-6 col-sm-6">
-          <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree1.jpg') }}" alt="Velouté Potiron Carotte">
-          <h3>Vélouté de Potiron et de Carottes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
-        </div>
-        <div class="col-sm-6 col-sm-6">
-          <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree2.jpg') }}" alt="Soupe Chou Vert">
-            <h3>Soupe aux Chou Vert <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+          <div class="texte">
+            <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree1.jpg') }}" alt="Velouté Potiron Carotte">
+            <h3>Vélouté de Potiron et de Carottes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
           </div>
         </div>
+        <div class="col-sm-6 col-sm-6">
+          <div class="texte">
+          <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree2.jpg') }}" alt="Soupe Chou Vert">
+          <h3>Soupe aux Chou Vert <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+        </div>
+        </div>
+      </div>
         <div class="row">
             <div class="col-sm-6 col-sm-6">
+              <div class="texte">
               <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree3.jpg') }}" alt="Flan de Courgettes">
               <h3>Flan de Courgettes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
             </div>
+            </div>
             <div class="col-sm-6 col-sm-6">
+              <div class="texte">
               <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree4.jpg') }}" alt="Terrine de poisson au basilic">
               <h3>Terrine de poisson au basilic <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+            </div>
           </div>
+        </div>
     </article>
     <article id="plat">
       <div class="titre">
@@ -68,24 +77,33 @@ $(function(){
         <img class="underline" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline">
       </div>
       <div class="row">
-          <div class="col-sm-6 col-sm-6">
+        <div class="col-sm-6 col-sm-6">
+          <div class="texte">
             <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree1.jpg') }}" alt="Velouté Potiron Carotte">
             <h3>Vélouté de Potiron et de Carottes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
           </div>
-          <div class="col-sm-6 col-sm-6">
-            <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree2.jpg') }}" alt="Soupe Chou Vert">
-            <h3>Soupe aux Chou Vert <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
-          </div>
         </div>
+        <div class="col-sm-6 col-sm-6">
+          <div class="texte">
+          <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree2.jpg') }}" alt="Soupe Chou Vert">
+          <h3>Soupe aux Chou Vert <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+        </div>
+        </div>
+      </div>
         <div class="row">
             <div class="col-sm-6 col-sm-6">
+              <div class="texte">
               <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree3.jpg') }}" alt="Flan de Courgettes">
               <h3>Flan de Courgettes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
             </div>
+            </div>
             <div class="col-sm-6 col-sm-6">
+              <div class="texte">
               <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree4.jpg') }}" alt="Terrine de poisson au basilic">
               <h3>Terrine de poisson au basilic <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+            </div>
           </div>
+        </div>
     </article>
     <article id="dessert">
 
@@ -94,24 +112,33 @@ $(function(){
         <img class="underline" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline">
       </div>
       <div class="row">
-          <div class="col-sm-6 col-sm-6">
+        <div class="col-sm-6 col-sm-6">
+          <div class="texte">
             <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree1.jpg') }}" alt="Velouté Potiron Carotte">
             <h3>Vélouté de Potiron et de Carottes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
           </div>
-          <div class="col-sm-6 col-sm-6">
-            <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree2.jpg') }}" alt="Soupe Chou Vert">
-            <h3>Soupe aux Chou Vert <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
-          </div>
         </div>
+        <div class="col-sm-6 col-sm-6">
+          <div class="texte">
+          <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree2.jpg') }}" alt="Soupe Chou Vert">
+          <h3>Soupe aux Chou Vert <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+        </div>
+        </div>
+      </div>
         <div class="row">
             <div class="col-sm-6 col-sm-6">
+              <div class="texte">
               <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree3.jpg') }}" alt="Flan de Courgettes">
               <h3>Flan de Courgettes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
             </div>
+            </div>
             <div class="col-sm-6 col-sm-6">
+              <div class="texte">
               <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree4.jpg') }}" alt="Terrine de poisson au basilic">
               <h3>Terrine de poisson au basilic <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+            </div>
           </div>
+        </div>
     </article>
     <article id="sucre">
       <div class="titre">
@@ -119,24 +146,33 @@ $(function(){
         <img class="underline" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline">
       </div>
       <div class="row">
-          <div class="col-sm-6 col-sm-6">
+        <div class="col-sm-6 col-sm-6">
+          <div class="texte">
             <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree1.jpg') }}" alt="Velouté Potiron Carotte">
             <h3>Vélouté de Potiron et de Carottes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
           </div>
-          <div class="col-sm-6 col-sm-6">
-            <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree2.jpg') }}" alt="Soupe Chou Vert">
-            <h3>Soupe aux Chou Vert <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
-          </div>
         </div>
+        <div class="col-sm-6 col-sm-6">
+          <div class="texte">
+          <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree2.jpg') }}" alt="Soupe Chou Vert">
+          <h3>Soupe aux Chou Vert <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+        </div>
+        </div>
+      </div>
         <div class="row">
             <div class="col-sm-6 col-sm-6">
+              <div class="texte">
               <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree3.jpg') }}" alt="Flan de Courgettes">
               <h3>Flan de Courgettes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
             </div>
+            </div>
             <div class="col-sm-6 col-sm-6">
+              <div class="texte">
               <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree4.jpg') }}" alt="Terrine de poisson au basilic">
               <h3>Terrine de poisson au basilic <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+            </div>
           </div>
+        </div>
     </article>
     <article id="sel">
       <div class="titre">
@@ -144,24 +180,33 @@ $(function(){
         <img class="underline" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline">
       </div>
       <div class="row">
-          <div class="col-sm-6 col-sm-6">
+        <div class="col-sm-6 col-sm-6">
+          <div class="texte">
             <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree1.jpg') }}" alt="Velouté Potiron Carotte">
             <h3>Vélouté de Potiron et de Carottes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
           </div>
-          <div class="col-sm-6 col-sm-6">
-            <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree2.jpg') }}" alt="Soupe Chou Vert">
-            <h3>Soupe aux Chou Vert <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
-          </div>
         </div>
+        <div class="col-sm-6 col-sm-6">
+          <div class="texte">
+          <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree2.jpg') }}" alt="Soupe Chou Vert">
+          <h3>Soupe aux Chou Vert <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+        </div>
+        </div>
+      </div>
         <div class="row">
             <div class="col-sm-6 col-sm-6">
+              <div class="texte">
               <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree3.jpg') }}" alt="Flan de Courgettes">
               <h3>Flan de Courgettes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
             </div>
+            </div>
             <div class="col-sm-6 col-sm-6">
+              <div class="texte">
               <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree4.jpg') }}" alt="Terrine de poisson au basilic">
               <h3>Terrine de poisson au basilic <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
+            </div>
           </div>
+        </div>
     </article>
   </section>
 </body>
