--- a/Developpement/static/styles/css/stage/stage_recettes.css
+++ b/Developpement/static/styles/css/stage/stage_recettes.css
@@ -19,10 +19,6 @@ h1 {
   text-align: center;
 }
 
-h3{
-  text-align: center;
-}
-
 header section {
   position: relative;
   width: 90%;
@@ -60,6 +56,28 @@ article {
   margin-top: -3%;
 }
 
+.texte{
+  background-color: white;
+  border-radius: 5%;
+  border-style:none;
+}
+
+.img-thumbnail{
+  border-radius: 6%;
+  border-style: none;
+  width: 98%;
+  margin: 1%;
+}
+
+h3{
+  text-align: center;
+  font-size: 1em;
+  padding: 5%;
+  margin-top: -0.5%;
+  text-decoration: none;
+  color: black;
+}
+
 /* Nav */
 
 nav {
@@ -67,7 +85,7 @@ nav {
   position: fixed;
   top: 0;
   left: 0;
-  height: auto;
+  width: 100%;
   background: rgba(0, 0, 0, 0.9);
   z-index: 999;
 }
@@ -83,8 +101,7 @@ nav li {
   margin: 0;
   padding: 0;
   list-style-type: none;
-  display: inline-block;
-  *display: inline;
+  display: inline;
   zoom: 1;
 }
 
@@ -97,6 +114,7 @@ nav li a {
   transition: all .3s ease-in-out;
   font-size: 90%;
   font-size: 600;
+  display: inline;
 }
 
 nav li a:hover {
